# indexer

./: Cargo.toml  README.md
crates/cli/src/: commands.rs
crates/core/src/: config.rs  parser.rs  store.rs
crates/db/src/: schema.rs
crates/index/src/: fetch.rs  lib.rs
crates/p2p/src/: lib.rs
src/: main.rs
