[package]
name = "indexer"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    "crates/core",
    "crates/models",
    "crates/db",
    "crates/utils",
    "crates/cli",
    "crates/p2p",
]

[dependencies]
core = { path = "./crates/core" }
models = { path = "./crates/models" }
db = { path = "./crates/db" }
utils = { path = "./crates/utils" }
cli = { path = "./crates/cli" }
p2p = { path = "./crates/p2p" }
